@@ -1,3 +1,7 @@
+2012-02-20  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* src/PJ_healpix.c: fix windows build issues (#133)
+
 2012-02-15  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* src/pj_utils.c: Add pj_get_spheroid_defn() (#142)
